describe system and methodology in experiments

--- a/literature.bib
+++ b/literature.bib
@@ -195,17 +195,6 @@
   year={2014}
 }
 
-@article{catalyurek1999hypergraph,
-  title={Hypergraph-partitioning-based decomposition for parallel sparse-matrix vector multiplication},
-  author={Catalyurek, Umit V and Aykanat, Cevdet},
-  journal={IEEE Transactions on parallel and distributed systems},
-  volume={10},
-  number={7},
-  pages={673--693},
-  year={1999},
-  publisher={IEEE}
-}
-
 @inproceedings{viswanathan2012dac,
   title={The DAC 2012 routability-driven placement contest and benchmark suite},
   author={Viswanathan, Natarajan and Alpert, Charles and Sze, Cliff and Li, Zhuo and Wei, Yaoguang},
@@ -240,6 +229,29 @@
   year={1999},
   publisher={IEEE}
 }
+
+@article{karypis2000multilevel,
+  title={Multilevel k-way hypergraph partitioning},
+  author={Karypis, George and Kumar, Vipin},
+  journal={VLSI design},
+  volume={11},
+  number={3},
+  pages={285--300},
+  year={2000},
+  publisher={Hindawi Publishing Corporation}
+}
+
+@article{catalyurek1999hypergraph,
+  title={Hypergraph-partitioning-based decomposition for parallel sparse-matrix vector multiplication},
+  author={Catalyurek, Umit V and Aykanat, Cevdet},
+  journal={IEEE Transactions on parallel and distributed systems},
+  volume={10},
+  number={7},
+  pages={673--693},
+  year={1999},
+  publisher={IEEE}
+}
+
 
 @inproceedings{osipov2010n,
   title={n-Level Graph Partitioning},
