--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -24,6 +24,7 @@
 
 % Einige Standard-Mathematik Pakete
 \usepackage{latexsym,amsmath,amssymb,mathtools,textcomp}
+\usepackage{listings}
 
 % Unterstützung für Sätze und Definitionen
 \usepackage{amsthm}
@@ -302,9 +303,10 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Using Max-Flow-Min-Cut Computations as a Local Search Strategy}
+\section{Using Max-Flow-Min-Cut Computations as Refinement Strategy}
+\label{sec:flow_refinement}
 
-\input{sections/local_search}
+\input{sections/flow_refinement}
 
 \newpage
 
