--- a/macros.tex
+++ b/macros.tex
@@ -45,9 +45,11 @@
 %Flow Variants
 \newcommand{\FlowVariant}[4]{(#1\text{F},#2\text{C},#3\text{M},#4\text{FM})}
 
-%KaHyPar Variants
+%Partitioner Variants
 \newcommand{\KaHyPar}[1]{KaHyPar-#1}
 \newcommand{\KaHyParConfig}[2]{KaHyPar-#1$_\text{(#2)}$}
+\newcommand{\hMetis}[1]{hMetis-#1}
+\newcommand{\PaToH}[1]{PaToH-#1}
 
 \newcounter{todocount}
 \setcounter{todocount}{1}
