fix bug in instance table and write introduction of master thesis

--- a/literature.bib
+++ b/literature.bib
@@ -204,6 +204,33 @@
   organization={ACM}
 }
 
+@article{bui1992finding,
+  title={Finding good approximate vertex and edge partitions is NP-hard},
+  author={Bui, Thang Nguyen and Jones, Curt},
+  journal={Information Processing Letters},
+  volume={42},
+  number={3},
+  pages={153--159},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@book{lengauer2012combinatorial,
+  title={Combinatorial algorithms for integrated circuit layout},
+  author={Lengauer, Thomas},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+@incollection{bulucc2016recent,
+  title={Recent advances in graph partitioning},
+  author={Bulu{\c{c}}, Ayd{\i}n and Meyerhenke, Henning and Safro, Ilya and Sanders, Peter and Schulz, Christian},
+  booktitle={Algorithm Engineering},
+  pages={117--158},
+  year={2016},
+  publisher={Springer}
+}
+
 @article{mann2014formula,
   title={Formula partitioning revisited},
   author={Mann, Zolt{\'a}n {\'A}d{\'a}m and Papp, P{\'a}l Andr{\'a}s},
