--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -247,39 +247,24 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\listoffigures
-\listoftables
-\listofalgorithms
-
-\clearpage
+%\listoffigures
+%\listoftables
+%\listofalgorithms
+%
+%\clearpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Introduction}
 
-\subsection{Motivation}
-
-\subsection{Contributions}
-
-\begin{enumerate}
-\item Present sparsifying techniques of the underlying flow network of hypergraphs
-      which result in a speed up on real world benchmark instances of up to a factor of $7$.
-\item We show how to configure the source and sink sets of the underlying flow network
-      of a subhypergraph $H_{V'}$ ($V' \subseteq V$) such that a \emph{Max-Flow-Min-Cut}
-      computation on $H_{V'}$ yields to an improvement on the original hypergraph $H$.
-\item We have integrated a refinement algorithm based on \emph{Max-Flow-Min-Cut}-computations
-      into the current state-of-the-art hypergraph partitioner \emph{KaHyPar} which improved
-      the solution quality by $2\%$.
-\item We compare \emph{KaHyPar} against other hypergraph partitioner and show that our new
-      approach leads to best known solutions on most of our benchmark instances.
-      
-\end{enumerate}
+\input{sections/introduction}
 
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Preliminaries}
+\label{sec:preliminaries}
 
 \input{sections/preliminaries}
 
@@ -288,6 +273,7 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Related Work}
+\label{sec:related_work}
 
 \input{sections/related_work}
 
@@ -313,6 +299,7 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experimental Results}
+\label{sec:experiments}
 
 \input{sections/experiments}
 
@@ -321,6 +308,7 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Conclusion}
+\label{sec:conclusion}
 
 \newpage
 
