--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -310,6 +310,8 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 \section{Conclusion}
 \label{sec:conclusion}
 
+\input{sections/conclusion}
+
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
